pkg/workloads/jellyfin/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      name: jellyfin
      namespace: jellyfin
      labels:
        app: jellyfin
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: app
                  operator: In
                  values:
                    - compute
      # securityContext:
        # fsGroupChangePolicy: "OnRootMismatch"
        # # TODO change this to a custom added user, for now core will work.
        # runAsUser: 1000
        # runAsGroup: 1000
        # supplementalGroups:
          # render group id
          # getent group render | cut -d ':' -f 3
          # - 105
      containers:
      - name: jellyfin
        livenessProbe:
          initialDelaySeconds: 120
          httpGet: 
            path: /health
            port: web-client
            scheme: HTTP
        image: docker.io/linuxserver/jellyfin:10.11.2
        ports:
        - name: web-client
          containerPort: 8096
          protocol: TCP
        securityContext:
          privileged: true
          capabilities:
            drop:
            - NET_ADMIN
            - CAP_MKNOD
            - CAP_NET_RAW
            - CAP_AUDIT_WRITE
        volumeMounts:
        - name: render
          mountPath: /dev/dri/renderD128
        resources:
          requests:
            memory: "1G"
            cpu: "500m"
          limits:
            memory: "15G"
            cpu: "5000m"
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data-pvc
      - name: config
        persistentVolumeClaim:
          claimName: config-pvc
      - name: plugins
        persistentVolumeClaim:
          claimName: plugins-pvc
      - name: render
        hostPath:
          path: /dev/dri/renderD128
          type: CharDevice
      - name: card1
        hostPath:
          path: /dev/dri/card1
          type: CharDevice
      dnsPolicy: ClusterFirst
      restartPolicy: Always
