pkg/workloads/jellyfin/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
    - name: jellyfin-web
      protocol: TCP
      port: 8085
      targetPort: web
  type: LoadBalancer
