pkg/workloads/jellyfin/base/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-ir
  namespace: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`jellyfin.expresso.lan`)
  tls:
    secretName: domain-tls-jellyfin
    # domains:
      # - main: "jellyfin.expresso.lan"
    # options:
      # name: jellyfin
      # namespace: jellyfin
